[package]
authors = ["Darrik <30670444+mdarrik@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "superbit-catapult-feature-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
#panic-halt = "0.2.0" 
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"
superbit-board = { git = "https://github.com/mdarrik/superbit-board", version = "0.2.1" }
#lsm303agr = "0.2.2" # uncomment if using magnetometer/accelerometer

# this lets you use `cargo fix`!
[[bin]]
name = "superbit-catapult-feature-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
